# Waku-Waku

./: .gitignore  BTB.h  CMakeLists.txt  Dockerfile  LICENSE  README.md  a.out  assembler.h  bs.cpp  build.sh  build_copy_pybind.sh  build_frontend.sh  core.h  docker_run.md  filename.txt  hazardDetector.h  main.cpp  memory.txt  memory_after.txt  memory_before.txt  processor.h  requirements.md  requirements.txt  run.md  state.h  test.txt  test2.txt  test3.txt  test4.txt  test5.txt
codes/: bubble_sort.s  hazard.s  selection_sort.s  slot0.s  slot1.s
gui/: main.py
gui/frontend/: package-lock.json  package.json
gui/frontend/src/: App.vue
gui/frontend/src/components/: Pipeline.vue  PipelineHistory.vue  RegisterHistory.vue  Registers.vue  Stats.vue
gui/node/: package-lock.json
gui/node/frontend/src/: App.vue
src/gui/backend/: main.py  try.py  vercel.json
src/gui/backend/static/css/: app.3194e5a7.css  app.7ed0905c.css  app.c847c194.css
src/gui/backend/static/js/: app.2ee15dc6.js  app.2ee15dc6.js.map  app.386f5842.js  app.3b92773e.js  app.44df7633.js.map  app.6c4b7852.js  app.8970c2d1.js.map  app.955055ec.js.map  (+6 more)
src/gui/backend/templates/: index.html
src/gui/frontend/: package-lock.json  package.json
src/gui/frontend/WakuWaku/: README.md  index.html  package-lock.json  package.json
src/gui/frontend/src/: App.vue
src/simulator/: BTB.h  assembler.cpp  assembler.h  branchPredictor.cpp  branchPredictor.h  cache.cpp  cache.h  core.cpp  core.h  hazardDetector.cpp  hazardDetector.h  main.cpp  processor.cpp  processor.h  state.cpp  state.h  util.cpp  util.h
(+8 files in other folders)
